<resources>
    <string name="app_name">MyCryptoApp</string>
    <string name="the_index_is_calculated">The rating TOP-100 cryptocurrencies by market capitalization. \nPowered by CoinGecko API</string>
    <string name="rate_this_app_button_text">Rate This App</string>
    <string name="market_cap">Market Cap\u0020</string>
    <string name="price">Price $</string>
    <string name="market_cap_rank_text">Market Cap Rank</string>
    <string name="mc_change_in_24h_text">MC change in 24h, %</string>
    <string name="all_time_high_ath_text">All Time High(ATH)</string>
    <string name="ath_change_text">ATH change, %</string>
    <string name="circulation_supply_text">Circulating Supply</string>
    <string name="total_supply_text">Total Supply</string>
</resources>