<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChartActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartCurrency"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/regular_horizontal_margin"
        android:layout_marginEnd="@dimen/regular_horizontal_margin"
        android:layout_marginBottom="@dimen/regular_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalSupply" />

    <ProgressBar
        android:id="@+id/progressChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="100dp"
        app:layout_constraintBottom_toBottomOf="@id/chartCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalSupply" />

    <ImageView
        android:id="@+id/ivCurrencyDetailIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="@dimen/regular_horizontal_margin"
        android:layout_marginTop="@dimen/big_vertical_margin"
        android:src="@drawable/bitcoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marketCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_horizontal_margin"
        android:layout_marginTop="@dimen/big_vertical_margin"
        android:text="@string/market_cap_rank_text"
        app:layout_constraintStart_toEndOf="@id/ivCurrencyDetailIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marketCapChange"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:text="@string/mc_change_in_24h_text"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/marketCap" />

    <TextView
        android:id="@+id/ath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:text="@string/all_time_high_ath_text"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/marketCapChange" />

    <TextView
        android:id="@+id/athChangePercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:text="@string/ath_change_text"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/ath" />

    <TextView
        android:id="@+id/circulatingSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:text="@string/circulation_supply_text"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/athChangePercentage" />

    <TextView
        android:id="@+id/totalSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:text="@string/total_supply_text"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/circulatingSupply" />

    <TextView
        android:id="@+id/tvDetailMarketCapRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_vertical_margin"
        android:layout_marginEnd="@dimen/big_horizontal_margin"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMarketCapChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginEnd="@dimen/big_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailMarketCapRank" />

    <TextView
        android:id="@+id/tvATH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginEnd="@dimen/big_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMarketCapChange" />

    <TextView
        android:id="@+id/tvAthChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginEnd="@dimen/big_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvATH" />

    <TextView
        android:id="@+id/tvCirculatingSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginEnd="@dimen/big_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAthChange" />

    <TextView
        android:id="@+id/tvTotalSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginEnd="@dimen/big_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCirculatingSupply" />

</androidx.constraintlayout.widget.ConstraintLayout>